MMA-6450 la til api-dokumentasjon